--- a/src/base/_fonts.scss
+++ b/src/base/_fonts.scss
@@ -22,6 +22,7 @@ h1 {
   font-size: colors_font.$lg;
   color: colors_font.$very-dark-desaturated-violet;
   letter-spacing: 0.06rem;
+  margin-bottom: 1.25rem;
 }
 
 h1 + p {
@@ -31,7 +32,7 @@ h1 + p {
 p {
   font-size: colors_font.$sm;
   color: colors_font.$dark-grayish-violet;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 h2,
 span,
