--- a/src/layout/_main.scss
+++ b/src/layout/_main.scss
@@ -1,20 +1,42 @@
 @use "../abtract/mixin" as layout;
 @use "../abtract/variable" as colors_bg;
 .main {
+  overflow: hidden;
   width: 100%;
   min-height: 100vh;
   @include layout.flex($direction: row, $gap: 7rem);
   background-color: rgb(248, 248, 248);
+  position: relative;
   &__introduction {
     max-width: 32rem;
   }
   &__mobile {
-    // padding: 1rem;
+    padding: 0.15rem;
     max-width: 20rem;
     height: 37rem;
     border: 0.8rem solid #ffffff;
     border-radius: 1.5rem;
     box-shadow: 0.2rem 0.75rem 0.4rem rgba(0, 0, 0, 0.067);
     background-color: colors_bg.$light-grayish-violet;
+  }
+  &::after,
+  &::before {
+    content: "";
+    width: 35rem;
+    height: 42rem;
+    background-color: rgb(255, 0, 0);
+    position: absolute;
+  }
+  &::after {
+    top: 0;
+    left: -7rem;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+  }
+  &::before {
+    bottom: 0;
+    right: -12rem;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
   }
 }
