Change the values

--- a/src/abtract/_variable.scss
+++ b/src/abtract/_variable.scss
@@ -7,9 +7,9 @@ $moderate-violet: hsl(276, 55%, 52%);
 $desaturated-dark-violet: hsl(271, 15%, 43%);
 // (placeholder text)
 $grayish-blue: hsl(206, 6%, 79%);
-//  (main heading)
+// - (main heading)
 $very-dark-desaturated-violet: hsl(271, 36%, 24%);
-// (paragraph)
+// - (paragraph)
 $dark-grayish-violet: hsl(270, 7%, 64%);
 
 // ----------- Gradients-----------
@@ -23,7 +23,7 @@ $light-violet: hsl(264, 100%, 61%);
 // ----------- Secondary-----------
 
 $white: hsl(0, 0%, 100%);
-// (app background)
+// - (app background)
 $light-grayish-violet: hsl(270, 20%, 96%);
 //  (submit button background)
 $very-dark-desaturated-violet: hsl(271, 36%, 24%);
@@ -31,5 +31,5 @@ $very-dark-desaturated-violet: hsl(271, 36%, 24%);
 $very-light-magenta: hsl(289, 100%, 72%);
 // ----- font-size ----
 $lg: 2.1em;
-$md: 1em;
+$md: 0.95em;
 $sm: 0.87em;
