--- a/src/layout/_main.scss
+++ b/src/layout/_main.scss
@@ -1,42 +1,51 @@
 @use "../abtract/mixin" as layout;
 @use "../abtract/variable" as colors_bg;
 .main {
-  overflow: hidden;
   width: 100%;
   min-height: 100vh;
   @include layout.flex($direction: row, $gap: 7rem);
-  background-color: rgb(248, 248, 248);
   position: relative;
+  overflow: hidden;
   &__introduction {
-    max-width: 32rem;
+    max-width: 35rem;
+    padding-right: 5rem;
+  }
+  &__description {
+    hyphens: none;
   }
   &__mobile {
-    padding: 0.15rem;
-    max-width: 20rem;
+    max-width: 19rem;
     height: 37rem;
-    border: 0.8rem solid #ffffff;
-    border-radius: 1.5rem;
+    border: 0.8rem solid colors_bg.$white;
+    border-radius: 2rem;
     box-shadow: 0.2rem 0.75rem 0.4rem rgba(0, 0, 0, 0.067);
     background-color: colors_bg.$light-grayish-violet;
+    margin-left: 9rem;
   }
   &::after,
   &::before {
     content: "";
     width: 35rem;
-    height: 42rem;
-    background-color: rgb(255, 0, 0);
+    height: 44rem;
     position: absolute;
+    z-index: -1;
   }
   &::after {
     top: 0;
     left: -7rem;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
+    background-image: linear-gradient(
+      180deg,
+      colors_bg.$light-magenta 1%,
+      colors_bg.$light-violet 90%
+    );
   }
   &::before {
     bottom: 0;
     right: -12rem;
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
+    background-color: rgba(190, 156, 156, 0.076);
   }
 }
