--- a/src/layout/_header_mobile.scss
+++ b/src/layout/_header_mobile.scss
@@ -1,48 +1,61 @@
+@use "../abtract/mixin" as layout;
+@use "../abtract/variable" as colors_bg;
 .mobile {
   &__perfil {
-    min-height: 7rem;
-    padding: 0.5rem;
-    background-color: rgb(8, 7, 7);
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    min-height: 6rem;
+    padding-top: 1.5rem;
+    padding-left: 0.5rem;
+    padding-right: 1rem;
+    background-image: linear-gradient(
+      90deg,
+      colors_bg.$light-violet,
+      colors_bg.$light-magenta
+    );
+    border-top-left-radius: 0.85rem;
+    border-top-right-radius: 0.85rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 0.75rem;
+  }
+  &__information {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.1rem;
   }
   &__back {
-    width: 1rem;
-    outline: solid red 1px;
+    width: 1.5rem;
+    filter: brightness(100%) invert(1);
   }
   &__wrapper {
-    flex: 80%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    outline: solid red 1px;
     gap: 0.75rem;
   }
   &__avatar {
-    outline: solid red 1px;
+    width: 2.15rem;
+    border-radius: 50%;
+    border: solid 2px colors_bg.$very-light-magenta;
   }
   &__userInformation {
-    flex: 100%;
-    outline: solid red 1px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 0.25rem;
   }
   &__name {
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
   &__status {
-    font-size: 0.7em;
+    font-size: 0.6em;
+    color: colors_bg.$pale-violet;
   }
 
   &__settings {
-    width: 1rem;
-    outline: solid red 1px;
+    width: 1.25rem;
+
+    filter: brightness(100%) invert(1);
   }
 }
