Add the outline for the mobile

--- a/src/layout/_mobile.scss
+++ b/src/layout/_mobile.scss
@@ -1,13 +1,14 @@
+@use "../abtract/variable" as colors_bg;
 .mobile {
   position: relative;
   &__camera {
     width: 10.5rem;
-    height: 2.4rem;
+    height: 2.2rem;
     position: absolute;
-    top: -0.65rem;
+    top: -0.5rem;
     left: calc(50% - 5.25rem);
     border-bottom-left-radius: 1.2rem;
     border-bottom-right-radius: 1.2rem;
-    background-color: #fff;
+    background-color: colors_bg.$white;
   }
 }
