Add the correct name to partial messages

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,7 +4,7 @@
 // --------- Components ---------
 @use "components/hidden";
 @use "components/content_mobile";
-@use "components/mesages";
+@use "components/messages";
 @use "components/form";
 // --------- Layout ---------
 @use "layout/main";
