--- a/src/components/_content_mobile.scss
+++ b/src/components/_content_mobile.scss
@@ -1,54 +1,21 @@
+@use "../abtract/mixin" as layout;
 .content {
-  //
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: flex-start;
-  justify-content: center;
-  //
+  @include layout.flex($aling: flex-start, $gap: 1rem);
   padding: 0.5rem;
   &__wrapper {
     max-width: 12rem;
-    //
-    display: flex;
-    flex-direction: column;
-    gap: 0.25rem;
-    align-items: flex-start;
-    justify-content: center;
-    //
+    @include layout.flex($aling: flex-start, $gap: 0.25rem);
     &--left {
       align-self: flex-end;
       align-items: flex-end;
     }
   }
   &__images {
-    //
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 0.5rem;
-    //
+    @include layout.flex($justify: flex-end, $direction: row, $gap: 0.5rem);
   }
   &__image {
     width: 4rem;
     border-radius: 1rem;
-  }
-  &__messages {
-    // margin-bottom: 0.6rem;
-    padding-block: 0.5rem;
-    padding-inline: 1rem;
-    background-color: red;
-    border-radius: 1rem;
-    border-bottom-left-radius: 0.25rem;
-    color: #fff;
-    hyphens: auto;
-    &--left {
-      background-color: rgb(143, 114, 114);
-      max-width: fit-content;
-      padding-inline: 0.5rem;
-      border-radius: 1rem;
-      border-bottom-right-radius: 0.25rem;
-    }
   }
   &__ {
   }
