remove the max-width

--- a/src/layout/_main.scss
+++ b/src/layout/_main.scss
@@ -14,7 +14,7 @@
     hyphens: none;
   }
   &__mobile {
-    max-width: 19rem;
+    width: 19rem;
     height: 37rem;
     border: 0.8rem solid colors_bg.$white;
     border-radius: 2rem;
