Add the partial options

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @use "components/hidden";
 @use "components/content_mobile";
 @use "components/messages";
+@use "components/options";
 @use "components/form";
 // --------- Layout ---------
 @use "layout/main";
