--- a/src/abtract/_mixin.scss
+++ b/src/abtract/_mixin.scss
@@ -5,3 +5,9 @@
   flex-direction: $direction;
   gap: $gap;
 }
+
+@mixin break-media($break-point, $bread) {
+  @media screen and ($break-point: $break) {
+    @content;
+  }
+}
