Fix the name of the mixins media-break

--- a/src/abtract/_mixin.scss
+++ b/src/abtract/_mixin.scss
@@ -6,7 +6,7 @@
   gap: $gap;
 }
 
-@mixin break-media($break-point, $bread) {
+@mixin break-media($break-point, $break) {
   @media screen and ($break-point: $break) {
     @content;
   }
