--- a/src/base/_fonts.scss
+++ b/src/base/_fonts.scss
@@ -9,6 +9,7 @@
   src: url(../assets/fonts/Rubik-Regular.ttf);
 }
 body {
+  width: 100%;
   min-height: 100vh;
   font-size: 16px;
   font-family: rubik-regular;
